code: add rust option

--- a/code/.config/Code - OSS/User/settings.json
+++ b/code/.config/Code - OSS/User/settings.json
@@ -22,5 +22,6 @@
         72,
         80
     ],
-    "extensions.ignoreRecommendations": false
+    "extensions.ignoreRecommendations": false,
+    "rust-client.disableRustup": true
 }
