--- a/yay/.config/yay/config.json
+++ b/yay/.config/yay/config.json
@@ -35,7 +35,7 @@
 	"provides": true,
 	"pgpfetch": true,
 	"upgrademenu": true,
-	"cleanmenu": true,
+	"cleanmenu": false,
 	"diffmenu": true,
 	"editmenu": false,
 	"combinedupgrade": false,
