--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -21,17 +21,10 @@ set $term alacritty
 set $menu dmenu_path | dmenu | xargs swaymsg exec --
 
 ### Output configuration
-#
-# Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
+# Solid black background to look nice in gaps
 output * bg #000000 solid_color
 output DP-3 resolution 1920x1080 position 0,0
 output HDMI-A-1 resolution 1920x1080 position 1920,0
-#
-# Example configuration:
-#
-#   output HDMI-A-1 resolution 1920x1080 position 1920,0
-#
-# You can get the names of your outputs by running: swaymsg -t get_outputs
 
 ### Idle configuration
 #
@@ -209,7 +202,7 @@ bindsym Shift+XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -2%
 
 # Application keybindings
 bindsym --to-code Ctrl+Alt+b exec firefox --new-window
-bindsym --to-code Ctrl+Alt+f exec thunar --new-window
+bindsym --to-code Ctrl+Alt+f exec thunar
 
 #
 # Status Bar:
