sway: Use pacwall background
The path for the background image is the one my timer sets. Also set the
terminals to be transparent so that the image is always at least
slightly visible. It's kinda cheesy in an "OMG LEET HAXORZ" way, but boy
does it look nice, especially in combination with the gaps.

--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -21,10 +21,9 @@ set $term kitty
 set $menu dmenu_path | dmenu | xargs swaymsg exec --
 
 ### Output configuration
-# Solid black background to look nice in gaps
-output * bg #000000 solid_color
 output DP-3 resolution 1920x1080 position 0,0
 output HDMI-A-1 resolution 1920x1080 position 1920,0
+output * background /var/pictures/pacwall.png center #000000
 
 ### Idle configuration
 #
