kitty: Various additions

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -3,6 +3,18 @@ bold_font Fira Code Bold
 italic_font Fira Code Italic
 font_size 13.0
 
+cursor #a0a0a0
+
 disable_ligatures cursor
 
 background_opacity 0.90
+
+open_url_modifiers ctrl
+
+# Use this as a small visual indicator of which window is active. It's
+# usefulness varies from DE to DE
+inactive_text_alpha 0.9
+
+# Disable automatic check for updates since we'll be getting them via
+# pacman.
+update_check_interval 0
