kitty: Disable terminal bell

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -18,3 +18,7 @@ inactive_text_alpha 0.9
 # Disable automatic check for updates since we'll be getting them via
 # pacman.
 update_check_interval 0
+
+# Disable terminal bell because it's too distracting. Maybe playing around with
+# the audio level is a better solution.
+enable_audio_bell no
