sway: Set cursor theme

--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -25,6 +25,8 @@ output DP-3 resolution 1920x1080 position 0,0
 output HDMI-A-1 resolution 1920x1080 position 1920,0
 output * background /var/pictures/pacwall.png center #000000
 
+seat seat0 xcursor_theme pArch-24 24
+
 ### Idle configuration
 #
 # Example configuration:
