--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -210,6 +210,8 @@ bindsym --to-code Ctrl+Alt+f exec thunar
 #
 # Read `man 5 sway-bar` for more information about this section.
 bar {
+    swaybar_command waybar
+
     position top
 
     # When the status_command prints a new line to stdout, swaybar updates.
@@ -232,5 +234,17 @@ input * {
     xkb_layout "us,gr"
     xkb_options "grp:win_space_toggle"
 }
+
+set $cl_high #402090
+set $cl_indi #d9d8d8
+set $cl_back #231f20
+set $cl_fore #d9d8d8
+set $cl_urge #ee2e24
+
+# Colors                border   bg       text     indi     childborder
+client.focused          $cl_high $cl_high $cl_fore $cl_indi $cl_high
+client.focused_inactive $cl_back $cl_back $cl_fore $cl_back $cl_back
+client.unfocused        $cl_back $cl_back $cl_fore $cl_back $cl_back
+client.urgent           $cl_urge $cl_urge $cl_fore $cl_urge $cl_urge
 
 include /etc/sway/config.d/*
