--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -24,6 +24,7 @@ set $menu dmenu_path | dmenu | xargs swaymsg exec --
 output DP-3 resolution 1920x1080 position 0,0
 output HDMI-A-1 resolution 1920x1080 position 1920,0
 output * background /var/pictures/pacwall.png center #000000
+output * adaptive_sync on
 
 seat seat0 xcursor_theme pArch-24 24
 
