--- a/yay/.config/yay/config.json
+++ b/yay/.config/yay/config.json
@@ -22,7 +22,7 @@
 	"sortby": "votes",
 	"searchby": "name-desc",
 	"gitflags": "",
-	"removemake": "ask",
+	"removemake": "yes",
 	"sudobin": "sudo",
 	"sudoflags": "",
 	"requestsplitn": 150,
