Change to recommended powerlevel font

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
-font_family Fira Code Medium
-bold_font Fira Code Bold
-italic_font Fira Code Italic
+font_family MesloLGS NF Regular
+bold_font MesloLGS NF Bold
+italic_font MesloLGS NF Italic
 font_size 13.0
 
 cursor #a0a0a0
