Change font to patched fira code
Fira Code is the font I'd wanted from the get go, but it was missing
icons for p10k. As it turns out there are pached versions of many mono
fonts to turn them into fully p10k compatible.

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,7 +1,7 @@
-font_family MesloLGS NF Regular
-bold_font MesloLGS NF Bold
-italic_font MesloLGS NF Italic
-font_size 14.0
+font_family FiraCodeNerdFontCompleteM-Medium
+bold_font FiraCodeNerdFontCompleteM-Bold
+italic_font FiraCodeNerdFontCompleteM-Light
+font_size 13.0
 
 cursor #a0a0a0
 
