--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -7,6 +7,11 @@ cursor #a0a0a0
 
 disable_ligatures cursor
 
+# Disable ligatures. Useful for applications that are broken by ligatures like
+# ascii-based guis
+map alt+l disable_ligatures_in active always
+map alt+shift+l disable_ligatures_in active cursor
+
 background_opacity 0.90
 
 open_url_modifiers ctrl
