Workaround for wofi being stupid with its path resolution
wofi shows all executables on the path, breaking the convention where
binaries can override others of the same name if they appear first.
This breaks stuff that depends on this behavior like firejail's
symlinks.

The solution is not great because it keeps around dmenu which I wanted
tto replace. At least I don't have to deal with its gui which was the
issue but I'd like to get rid of it entirely.

--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -18,7 +18,7 @@ set $term kitty
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
-set $menu wofi --show=run -L5 --location=2 | xargs swaymsg exec --
+set $menu dmenu_path | wofi -d -L5 --location=2 | xargs swaymsg exec --
 
 ### Output configuration
 output DP-3 resolution 1920x1080 position 0,0
