--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -23,10 +23,10 @@ set $menu dmenu_path | wofi -d -L5 --location=2 | xargs swaymsg exec --
 ### Output configuration
 output DP-3 resolution 1920x1080 position 0,0
 output HDMI-A-1 resolution 1920x1080 position 1920,0
-output * background /usr/share/backgrounds/archlinux/small.png center #000000
+output * background /usr/share/backgrounds/archlinux/split.png fit #000000
 output * adaptive_sync on
 
-seat seat0 xcursor_theme pArch-24 24
+seat seat0 xcursor_theme pArch-32 32
 
 ### Idle configuration
 #
