sway: Adjust fonts

--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -246,4 +246,4 @@ client.urgent           $cl_urge $cl_urge $cl_fore $cl_urge $cl_urge
 
 include /etc/sway/config.d/*
 
-font Noto Serif 12
+font Fira Code Medium 12
