--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 font_family FiraCodeNerdFontCompleteM-Medium
 bold_font FiraCodeNerdFontCompleteM-Bold
-italic_font FiraCodeNerdFontCompleteM-Light
+italic_font SourceCodePro-It
 font_size 13.0
 
 cursor #a0a0a0
