Kitty: Try out Iosevka font

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
-font_family FiraCodeNerdFontCompleteM-Medium
-bold_font FiraCodeNerdFontCompleteM-Bold
-italic_font SourceCodePro-SemiboldIt
+font_family Iosevka Medium Nerd Font Complete Mono
+bold_font Iosevka Medium Bold Nerd Font Complete Mono
+italic_font Iosevka Medium Italic Nerd Font Complete Mono
 font_size 13.0
 
 cursor #a0a0a0
