sway: Add plasma polkit agent

--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -247,3 +247,6 @@ client.urgent           $cl_urge $cl_urge $cl_fore $cl_urge $cl_urge
 include /etc/sway/config.d/*
 
 font Fira Code Medium 12
+
+# Start graphical polkit agent for privilege escalation prompts
+exec systemctl --user start plasma-polkit-agent.service
