wayland: Add xcb as fallback Qt plugin
This should fix applications not starting because they don't support the
wayland plugin. This should be relatively rare. I think it only occurs
for apps that bundle the Qt library, because my system's Qt should work
on Wayland. So this is for apps that release AppImages or similar, like
yuzu.

--- a/wayland-env/.config/environment.d/envvars.conf
+++ b/wayland-env/.config/environment.d/envvars.conf
@@ -1,6 +1,6 @@
 MOZ_ENABLE_WAYLAND=1
 
-QT_QPA_PLATFORM=wayland
+QT_QPA_PLATFORM="wayland;xcb"
 QT_STYLE_OVERRIDE=adwaita-dark
 
 CLUTTER_BACKEND=wayland
