sway: Use easyeffects instead of pulseeffects
It's the same program; the name changed upstream.

--- a/sway/.config/waybar/config
+++ b/sway/.config/waybar/config
@@ -63,7 +63,7 @@
             "default": ["", "", ""]
         },
         "on-click": "pavucontrol",
-        "on-click-right": "pulseeffects"
+        "on-click-right": "easyeffects"
     },
 
     "custom/temperature": {
