--- a/sway/.config/waybar/config
+++ b/sway/.config/waybar/config
@@ -4,7 +4,7 @@
 
     "modules-left": ["sway/workspaces", "sway/mode", "custom/media"],
     "modules-right": [
-        "idle_inhibitor", "pulseaudio", "cpu", "memory",
+        "idle_inhibitor", "sway/language","pulseaudio", "cpu", "memory",
         "temperature", "custom/temperature", "clock", "tray"],
 
     "sway/mode": {
