sway: Remove idle inhibitor

--- a/sway/.config/waybar/config
+++ b/sway/.config/waybar/config
@@ -4,8 +4,8 @@
 
     "modules-left": ["sway/workspaces", "sway/mode", "custom/media"],
     "modules-right": [
-        "idle_inhibitor", "sway/language","pulseaudio", "cpu", "memory",
-        "temperature", "custom/temperature", "clock", "tray"],
+        "sway/language","pulseaudio", "cpu", "memory", "temperature",
+        "custom/temperature", "clock", "tray"],
 
     "sway/mode": {
         "format": "<span style=\"italic\">{}</span>"
