--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -65,7 +65,7 @@ blink=yes
 
 [colors]
 # alpha=1.0
-# foreground=dcdccc
+foreground=d0d0d0
 background=000000
 
 ## Normal/regular colors (color palette 0-7)
