sway: Modify waybar to be compatible with hyprland
Also move it to its own directory as it is not strictly a part of sway
anymore.

--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -2,10 +2,14 @@
     "layer": "top",
     "height": 30,
 
-    "modules-left": ["sway/workspaces", "sway/mode", "custom/media"],
+    "modules-left": ["sway/workspaces", "wlr/workspaces", "sway/mode", "custom/media"],
     "modules-right": [
-        "sway/language","pulseaudio", "cpu", "memory", "temperature",
+        "sway/language","hyprland/language","pulseaudio", "cpu", "memory", "temperature",
         "custom/temperature", "clock", "tray"],
+
+    "wlr/workspaces": {
+        "on-click": "activate",
+    },
 
     "sway/mode": {
         "format": "<span style=\"italic\">{}</span>"
