--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -10,6 +10,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=DP-3,preferred,0x0,1
 monitor=DP-2,preferred,2560x0,1
+monitor=eDP-1,preferred,auto,1
 misc:vrr=2
 
 workspace=1, monitor:DP-3, default:true
@@ -43,6 +44,10 @@ input {
 
     accel_profile = flat
     sensitivity = -0.3 # -1.0 - 1.0, 0 means no modification.
+
+    touchpad {
+        natural_scroll = true
+    }
 }
 
 general {
