hyprland: Add audio binds

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -177,3 +177,10 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 bind= $mainMod, F, fullscreen
+
+# Volume keys
+bind = ,XF86AudioRaiseVolume,exec,amixer -q -D pulse sset Master 5%+
+bind = ,XF86AudioLowerVolume, exec, amixer -q -D pulse sset Master 5%-
+bind = ,XF86AudioMute, exec, amixer -q -D pulse sset Master toggle
+bind = SHIFT, XF86AudioRaiseVolume, exec, amixer -q -D pulse sset Master 2%+
+bind = SHIFT, XF86AudioLowerVolume, exec, amixer -q -D pulse sset Master 2%-
