--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -184,3 +184,5 @@ bind = ,XF86AudioLowerVolume, exec, amixer -q -D pulse sset Master 5%-
 bind = ,XF86AudioMute, exec, amixer -q -D pulse sset Master toggle
 bind = SHIFT, XF86AudioRaiseVolume, exec, amixer -q -D pulse sset Master 2%+
 bind = SHIFT, XF86AudioLowerVolume, exec, amixer -q -D pulse sset Master 2%-
+
+misc:disable_hyprland_logo = true
