hyprland: Disable blur
It's not really used in my current setup and I don't want to be possibly
paying a performance cost for an effect I don't get to see.

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -68,10 +68,7 @@ decoration {
 
     rounding = 5
     blur {
-        enabled = true
-        size = 3
-        passes = 1
-        new_optimizations = true
+        enabled = false
     }
 
     drop_shadow = true
