waybar: Revert hyprland-related changes
I'm going to take a break from hyprland as it seems to still have some
issues to iron out. If/when I return to it I think I'm going to figure
out some setup with separate configs for each window manager instead of
trying to make the single config compatible with both.

This reverts commit 94ca3ca1d61ebce8376de50641a6a5577a0f9982.

--- a/sway/.config/waybar/config
+++ b/sway/.config/waybar/config
@@ -2,14 +2,10 @@
     "layer": "top",
     "height": 30,
 
-    "modules-left": ["sway/workspaces", "wlr/workspaces", "sway/mode", "custom/media"],
+    "modules-left": ["sway/workspaces", "sway/mode", "custom/media"],
     "modules-right": [
-        "sway/language","hyprland/language","pulseaudio", "cpu", "memory", "temperature",
+        "sway/language","pulseaudio", "cpu", "memory", "temperature",
         "custom/temperature", "clock", "tray"],
-
-    "wlr/workspaces": {
-        "on-click": "activate",
-    },
 
     "sway/mode": {
         "format": "<span style=\"italic\">{}</span>"
