sway: Remove waybar's default temperature module
I don't know what it's trying to display but it's wrong, hovering around
17°C all the time.

--- a/sway/.config/waybar/config
+++ b/sway/.config/waybar/config
@@ -4,7 +4,7 @@
 
     "modules-left": ["sway/workspaces", "sway/mode", "custom/media"],
     "modules-right": [
-        "sway/language","pulseaudio", "cpu", "memory", "temperature",
+        "sway/language","pulseaudio", "cpu", "memory",
         "custom/temperature", "clock", "tray"],
 
     "sway/mode": {
