--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -8,7 +8,7 @@
 # title=foot
 # locked-title=no
 
-font=Iosevka Nerd Font Mono:style=Medium:size=15
+font=CommitMono Nerd Font:style=Regular:size=15
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
