--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -30,7 +30,7 @@ output * max_render_time off
 workspace 1 output DP-4
 workspace 2 output DP-3
 
-seat seat0 xcursor_theme pArch-32 32
+seat seat0 xcursor_theme pCircle-32 32
 
 ### Idle configuration
 #
