git: Add grnet config
Conditionally include this commit when working under `~/devel/grnet/`.
This allows automatically switching to work-appropriate name, email, and
signing key.

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,5 +1,7 @@
 [include]
 	path = .gitconfig-personal
+[includeIf "gitdir:~/devel/grnet/"]
+    path = ~/devel/grnet/.gitconfig-grnet
 [core]
 	editor = nvim
 	excludesfile = ~/.gitignore
