sway: Update waybar modules
- Move tray to the middle of the screen. It's a nicer place to spot
  "notifications" like Slack's (eg red circle for unread message). It
  also prevents the tray from moving around the modules on the right as
  background apps open/close.
- Replaces the pulseaudio module with the wireplumber one. The
  wireplumber module is the "native" way to handle pipewire, while
  pulseaudio would go through pipewire's pulseaudio compatibility layer.
- Remove CPU and memory modules. They're not really useful so let's not
  have clutter on the bar.

--- a/sway/.config/waybar/config
+++ b/sway/.config/waybar/config
@@ -3,9 +3,10 @@
     "height": 30,
 
     "modules-left": ["sway/workspaces", "sway/mode", "custom/media"],
+    "modules-center": ["tray"],
     "modules-right": [
-        "sway/language","pulseaudio", "cpu", "memory",
-        "custom/temperature", "clock", "tray"],
+        "sway/language","wireplumber",
+        "custom/temperature", "clock"],
 
     "sway/mode": {
         "format": "<span style=\"italic\">{}</span>"
@@ -49,7 +50,7 @@
         "format-icons": ["", "", ""]
     },
 
-    "pulseaudio": {
+    "wireplumber": {
         "scroll-step": 2,
         "format": "{volume}% {icon}",
         "format-muted": " {format_source}",
