sway: Update waybar style
- Make tooltips more readable. Especially fix calendar not showing the
  current day
- Don't use bold fonts universally

--- a/sway/.config/waybar/config
+++ b/sway/.config/waybar/config
@@ -26,8 +26,14 @@
     },
 
     "clock": {
-        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        "format": "{:<big>%H:%M</big> %Y-%m-%d}"
+        "tooltip-format": "<tt><small>{calendar}</small></tt>",
+        "format": "{:%Y-%m-%d %H:%M}",
+        "format-alt": "{:%H:%M}",
+        "calendar": {
+            "format": {
+                "today": "<span color='#FFFF00'><b><u>{}</u></b></span>"
+            }
+        }
     },
 
     "cpu": {
