sway: Update style
Use new background and a more purple waybar to match it

--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -29,7 +29,10 @@ output DP-2 resolution 2560x1440 position 0,0
 # max refresh rate of 144Hz we consume ~50Watts. With 100Hz we consume
 # ~10watts.
 output DP-3 resolution 1920x1080@100Hz position 2560,0
-output * background /usr/share/backgrounds/archlinux/split.png fit #000000
+# Originally downloaded from
+# https://cdna.artstation.com/p/assets/images/images/012/086/010/large/mikael-gustafsson-amongtrees-2-8.jpg?1532971442
+# Not included in the repo because of unclear copyright situation
+output * background /home/patatahooligan/Downloads/mikael-gustafsson-amongtrees-2-8.jpg fit #000000
 output * adaptive_sync on
 output * max_render_time off
 
