--- a/mangohud/.config/MangoHud/MangoHud.conf
+++ b/mangohud/.config/MangoHud/MangoHud.conf
@@ -252,7 +252,7 @@ show_fps_limit
 ################ INTERACTION #################
 
 ### Change toggle keybinds for the hud & logging
-# toggle_hud=Shift_R+F12
+toggle_hud=Shift+F12
 # toggle_hud_position=Shift_R+F11
 # toggle_fps_limit=Shift_L+F1
 # toggle_logging=Shift_L+F2
