--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -35,6 +35,10 @@ output * max_render_time off
 workspace 1 output DP-2
 workspace 2 output DP-3
 
+# Set "primary" monitor. The concept of primary display does not exist
+# in Wayland as far as I can tell, but it is necessary for some games.
+exec_always xrandr --output DP-2 --primary
+
 seat seat0 xcursor_theme pCircle-32 32
 
 ### Idle configuration
