--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,9 +1,10 @@
-font_family Iosevka Medium Nerd Font Complete Mono
-bold_font Iosevka Medium Bold Nerd Font Complete Mono
-italic_font Iosevka Medium Italic Nerd Font Complete Mono
-font_size 13.0
+font_family      family="CommitMono Nerd Font Mono"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
-cursor #a0a0a0
+font_size 15.0
+# cursor #a0a0a0
 
 disable_ligatures cursor
 
@@ -14,10 +15,6 @@ map alt+shift+l disable_ligatures_in active cursor
 
 open_url_modifiers ctrl
 
-# Use this as a small visual indicator of which window is active. It's
-# usefulness varies from DE to DE
-inactive_text_alpha 0.9
-
 # Disable automatic check for updates since we'll be getting them via
 # pacman.
 update_check_interval 0
@@ -25,3 +22,6 @@ update_check_interval 0
 # Disable terminal bell because it's too distracting. Maybe playing around with
 # the audio level is a better solution.
 enable_audio_bell no
+
+cursor_trail 1000
+cursor_trail_decay 0.05 0.2
