discord: Merge upstream changes
These were made automatically by discord.

--- a/discord/.config/discord/settings.json
+++ b/discord/.config/discord/settings.json
@@ -10,5 +10,7 @@
     "height": 1043
   },
   "chromiumSwitches": {},
-  "offloadAdmControls": false
+  "offloadAdmControls": true,
+  "enableHardwareAcceleration": true,
+  "asyncVideoInputDeviceInit": false
 }
